--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -33,15 +33,12 @@ Note: If you want to change the installed directory of Bonjour SDK, please doubl
 ====Mac OS X 10.10 and above====
 
 * Install cmake and Qt as usual (e.g. using brew):
- brew install cmake
- brew install qt
-
-* Fix <code>./ext/toolchain/commands1.py</code>:
-  * In the function <code>configure\_core()</code> at approx line 433, change <code>elif sys.platform == "darwin": </code> to read <code>if sys.platform == "darwin":</code>
-  * In the function <code>macPostGuiMake()</code> at approx line 770 and/or 773 change the path to be what your Qt library path is, probably <code>frameworkRootDir = "/usr/local/Cellar/qt/4.8.7/Frameworks"</code>
-
-See [https://github.com/synergy/synergy/issues/4572 this github issue] for more information.
-
+  * ```brew install cmake```
+  * ```brew install qt```
+* Fix ```./ext/toolchain/commands1.py```
+  * In the function ```configure\_core()``` at approx line 433, change ```elif sys.platform == "darwin":``` to read ```if sys.platform == "darwin":```
+  * In the function ```macPostGuiMake()``` at approx line 770 and/or 773 change the path to be what your Qt library path is, probably ```frameworkRootDir = "/usr/local/Cellar/qt/4.8.7/Frameworks"```
+  * See [this](https://github.com/synergy/synergy/issues/4572) github issue for more information.
 * Now configure and build:
  ./hm.sh conf -g1 --mac-sdk 10.10 --mac-identity test
  ./hm.sh build
