--- a/Compiling.mediawiki
+++ b/Compiling.mediawiki
@@ -32,25 +32,20 @@ Note: If you want to change the installed directory of Bonjour SDK, please doubl
 
 ====Mac OS X 10.10 and above====
 
-* Install cmake and Qt as usual (e.g. using brew):
-  
+* Install cmake and Qt as usual (e.g. using brew)
 ```
 brew install cmake
 brew install qt
 ```
-
-* **Fix "./ext/toolchain/commands1.py"**
+* Fix "./ext/toolchain/commands1.py"
 * In the function "configure\_core()" at approx line 433, change <code>elif sys.platform == "darwin":</code> to read <code>if sys.platform == "darwin":</code>
 * In the function "macPostGuiMake()" at approx line 770 and/or 773 change the path to be what your Qt library path is, probably "frameworkRootDir = "/usr/local/Cellar/qt/4.8.7/Frameworks"
 * See [https://github.com/synergy/synergy/issues/4572 this] github issue for more information.
-
 * Now configure and build
 
 ```
-
- ./hm.sh conf -g1 --mac-sdk 10.10 --mac-identity test
- ./hm.sh build
-
+./hm.sh conf -g1 --mac-sdk 10.10 --mac-identity test
+./hm.sh build
 ```
 
 Credits to [https://wordpress.update.sh/archives/410 this blog entry]
